manifest/objects/LVGO__Account__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__ACA_Population__c</fullName>
        <label>ACA Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__ASO_Population__c</fullName>
        <label>ASO Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Acc_Migrate_Status__c</fullName>
        <label>Acc Migrate Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create New</fullName>
                </value>
                <value>
                    <fullName>Migrate to Existing</fullName>
                </value>
                <value>
                    <fullName>Do Not Migrate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Accessible_lives__c</fullName>
        <label>Accessible lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__AccountNumber__c</fullName>
        <label>AccountNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__AccountSource__c</fullName>
        <label>Account Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Account_Clean_Request__c</fullName>
        <description>Complete this field if account needs to be cleaned/ reviewed for prospecting</description>
        <inlineHelpText>Complete this field if account needs to be cleaned / reviewed for prospecting.</inlineHelpText>
        <label>Account Clean Request</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee Headcount</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Health Plan</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Account_Engagement_Status__c</fullName>
        <formula>IF(ISPICKVAL(LVGO__Account_Type__c, &apos;Former Client&apos;), &quot;Former Client&quot;,
IF(AND(LVGO__Prior_Account_Status__c = &apos;Former Client&apos;, LVGO__Open_Opportunity_Count__c &gt;=1), &quot;Active Discussions&quot;,
IF(LVGO__Closed_Won_Opportunity_Count__c &gt;=1, &quot;Client&quot;,
IF(LVGO__Open_Opportunity_Count__c &gt;=1, &quot;Active Discussions&quot;,
IF(LVGO__Total_Closed_No_Decision_Opps__c &gt;=1, &quot;Discussions Currently Stalled&quot;,
IF( LVGO__Total_Closed_Lost_Opps__c &gt;=1, &quot;Discussions Currently Stalled&quot;,
&quot;Not Yet Engaged&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Engagement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_Grouping__c</fullName>
        <description>added new picklist</description>
        <label>Account Grouping</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aon - ARxC</fullName>
                </value>
                <value>
                    <fullName>ASO Attack BCBS CA</fullName>
                </value>
                <value>
                    <fullName>ASO Attack Highmark</fullName>
                </value>
                <value>
                    <fullName>ASO Attack Premera</fullName>
                </value>
                <value>
                    <fullName>BCBS Payer / Health Plan</fullName>
                </value>
                <value>
                    <fullName>Ben Wire Cambia List 022319</fullName>
                </value>
                <value>
                    <fullName>Biggest Swings</fullName>
                </value>
                <value>
                    <fullName>Census ISD Data</fullName>
                </value>
                <value>
                    <fullName>Cigna Premium</fullName>
                </value>
                <value>
                    <fullName>Client Sales - Enterprise</fullName>
                </value>
                <value>
                    <fullName>Covid-19 MyStrength Offer(s)</fullName>
                </value>
                <value>
                    <fullName>Current CVS TDC/Aetna Clients</fullName>
                </value>
                <value>
                    <fullName>Direct Client w/ CVS PBM</fullName>
                </value>
                <value>
                    <fullName>EGWP</fullName>
                </value>
                <value>
                    <fullName>EPIC Coalition - CVS</fullName>
                </value>
                <value>
                    <fullName>ESI/WTW RxC</fullName>
                </value>
                <value>
                    <fullName>ESI - DCV</fullName>
                </value>
                <value>
                    <fullName>ESI Health Connect 360</fullName>
                </value>
                <value>
                    <fullName>ESI Lifescan</fullName>
                </value>
                <value>
                    <fullName>ESI – Rational Med</fullName>
                </value>
                <value>
                    <fullName>ESI - Towers Coalition</fullName>
                </value>
                <value>
                    <fullName>Existing Clients with CVS/Aetna with Risk</fullName>
                </value>
                <value>
                    <fullName>Glen Target Account</fullName>
                </value>
                <value>
                    <fullName>HCSC - BCBS IL</fullName>
                </value>
                <value>
                    <fullName>HCSC - BCBS OK</fullName>
                </value>
                <value>
                    <fullName>HCSC - BCBS TX</fullName>
                </value>
                <value>
                    <fullName>HCSC - Empower</fullName>
                </value>
                <value>
                    <fullName>HCSC - Enable</fullName>
                </value>
                <value>
                    <fullName>HCSC - HAS</fullName>
                </value>
                <value>
                    <fullName>HSS Top 100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Account_Health_Score_Color__c</fullName>
        <label>Account Health Score Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_ID_Long__c</fullName>
        <description>Returns a unique account ID that allows unique VLOOKUPs at the account level</description>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
   IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
   +IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
   +IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
   +IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
   +IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
   )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
   IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
   +IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
   +IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
   +IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
   +IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
   )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
   IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
   +IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
   +IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
   +IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
   +IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
   )+1,1)</formula>
        <label>Account ID_Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_NPS__c</fullName>
        <label>Account NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_Narrative__c</fullName>
        <label>Account Narrative</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_Next_Steps__c</fullName>
        <description>Date of entry and next steps to move account forward</description>
        <inlineHelpText>Date of entry and next steps to move account forward</inlineHelpText>
        <label>Account Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_Owner_Active__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <label>Account Owner Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Account Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_Transition_Date__c</fullName>
        <description>Date when the first Program Overview transitioned from Client Implementation to Client Success</description>
        <inlineHelpText>Date when the first Program Overview transitioned from Client Implementation to Client Success</inlineHelpText>
        <label>Account Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_Type__c</fullName>
        <description>Field that indicates whether an account is a prospect, a client (and where they&apos;re at in the onboarding process), or former client</description>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                    <default>true</default>
                    <label>Prospecting</label>
                </value>
                <value>
                    <fullName>Prospecting - Expressed Interest</fullName>
                </value>
                <value>
                    <fullName>Prospecting – Not Currently Interested</fullName>
                </value>
                <value>
                    <fullName>Engaging</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Former Client</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Active Partner</fullName>
                </value>
                <value>
                    <fullName>Study</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Account_interested_in_following_products__c</fullName>
        <label>Account interested in following products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Livongo for Diabetes</fullName>
                    <default>true</default>
                    <label>Livongo for Diabetes</label>
                </value>
                <value>
                    <fullName>Livongo for Hypertension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Account_is_used_in_Downmarket_CMCs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this Partner Account is used to set up Downmarket Cohorts</description>
        <inlineHelpText>If checked, this Partner Account is used to set up Downmarket Cohorts</inlineHelpText>
        <label>Account is used in Downmarket CMCs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Acct_Guid__c</fullName>
        <description>Clone of TDH_Acct_Guid__c in Account object from GuidPackage</description>
        <externalId>true</externalId>
        <label>Acct Guid</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Acct_Rev_Synergy_Flag__c</fullName>
        <label>Acct Rev Synergy Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Legacy TD Client</fullName>
                </value>
                <value>
                    <fullName>Legacy LV Client</fullName>
                </value>
                <value>
                    <fullName>Legacy Combined TD/LV Client</fullName>
                </value>
                <value>
                    <fullName>Net New Client (All Solutions)</fullName>
                    <default>true</default>
                    <label>Net New Client (All Solutions)</label>
                </value>
                <value>
                    <fullName>Legacy HHS Client</fullName>
                </value>
                <value>
                    <fullName>Legacy Combined HHS/LV Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Activated_Percent_HTN__c</fullName>
        <description>Member Activation percentage (for Hypertension)</description>
        <label>Activated Percent (HTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Activated_Total_Diabetes__c</fullName>
        <description>Total activated member count (for diabetes)</description>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Activated Total (Diabetes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Activated_Total_HTN__c</fullName>
        <description>Total activated member count (for diabetes)</description>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Activated Total (HTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Activation__c</fullName>
        <description>Member Activation percent (for Diabetes)</description>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Activated Percent (Diabetes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Address_Verified__c</fullName>
        <formula>IF( CONTAINS(LVGO__MD_Personator_Results__c, &apos;AS01&apos; ) , true, false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Allow_multiple_Active_Client_Overviews__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selecting this option allows users to activate multiple Client Overviews on the same contract path simultaneously. Leaving this option deselected enforces only one Client Overview is allowed to be &apos;Active&apos; at a time.</inlineHelpText>
        <label>Allow multiple &apos;Active&apos; CO&apos;s per CP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Approval_Required_for_Pilot_Campaigns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case 1549</description>
        <label>Approval Required for Pilot Campaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__BAA_Signed_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BAA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__BOX_Contract_URL__c</fullName>
        <description>URL to the BOX Contract</description>
        <inlineHelpText>URL to the BOX Contract</inlineHelpText>
        <label>BOX Contract URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LVGO__Benefit_Plan_Year__c</fullName>
        <label>Benefit Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LVGO__Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Benefits_eligible_Employees__c</fullName>
        <description>Through conversations with the client, we have identified this is the number of US-based benefits-eligible employees</description>
        <inlineHelpText>Through conversations with the client, we have identified this is the number of US-based benefits-eligible employees</inlineHelpText>
        <label>Benefits-eligible Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__BillingAddress__c</fullName>
        <label>BillingAddress</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__BillingCity__c</fullName>
        <label>BillingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__BillingState__c</fullName>
        <label>BillingState</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Billing_Address_Custom__c</fullName>
        <label>Billing Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>LVGO__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Billing_State_Backend__c</fullName>
        <label>Billing State(Backend)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Billing__c</fullName>
        <description>Onboarding</description>
        <label>Billing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LVGO__Onboarding_Drop_Down</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Bypass_Address_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Address Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__CHC_Payer_Id__c</fullName>
        <inlineHelpText>InsurerCode as defined by Change Healthcare</inlineHelpText>
        <label>CHC Payer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__CMC_Prefix__c</fullName>
        <description>Determines the Client Member Code Prefix for downmarket clients</description>
        <inlineHelpText>Determines the Client Member Code Prefix for downmarket clients</inlineHelpText>
        <label>CMC Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSM assigned to account</description>
        <label>Commercial CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_CSM_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_Risk_Notes__c</fullName>
        <label>Campaign &amp; Risk Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_ARR__c</fullName>
        <description>JENGA-493</description>
        <inlineHelpText>Client BoB ARR(Across all programs)</inlineHelpText>
        <label>Client ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Implementation_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Implementation Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_Client_Implementation_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Overview_Count_Term_Exp__c</fullName>
        <inlineHelpText>Status = Terminated, Expired</inlineHelpText>
        <label>Client Overview Count_Term/Exp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Overview_Count__c</fullName>
        <inlineHelpText>Status = Active or Draft</inlineHelpText>
        <label>Client Overview Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Risk_Notes__c</fullName>
        <description>Place to track details regarding the Account Health Score (green, yellow, red) and possible risks to the account health</description>
        <inlineHelpText>Format for Notes: MM/DD/YYY (Initials) : Notes</inlineHelpText>
        <label>Account Health Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Risk__c</fullName>
        <defaultValue>(&quot;green&quot;)</defaultValue>
        <description>Score of the account health and potential risk (if yellow, red)</description>
        <inlineHelpText>*Green: Everything is good
*Yellow: Middle of the road participation and doesn’t engage often
*Orange: Unhappy and potential for RFP
*Red: Significant issues putting renewal at high risk
*Black: Confirmed or forecast termination</inlineHelpText>
        <label>Account Health Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#33FF33</color>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Blue</fullName>
                    <color>#33CCFF</color>
                    <label>Blue</label>
                </value>
                <value>
                    <fullName>Orange</fullName>
                    <color>#FF6600</color>
                    <label>Orange</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Black</fullName>
                    <color>#000000</color>
                    <label>Black</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Client_Segment__c</fullName>
        <description>Refined segmentation</description>
        <label>Client Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise - Gold</fullName>
                </value>
                <value>
                    <fullName>Enterprise - Silver</fullName>
                </value>
                <value>
                    <fullName>Large Market</fullName>
                </value>
                <value>
                    <fullName>Partner Contract Path/myStrength 1.0</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Select Partner Accounts/Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Client_Tier_Comments__c</fullName>
        <description>Client Stats</description>
        <label>Client Tier Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Tier__c</fullName>
        <label>Client Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Client_approves_use_of_logo__c</fullName>
        <description>Marketing</description>
        <label>Client approves use of logo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Client_details_regarding_referrals__c</fullName>
        <description>Marketing</description>
        <label>Client details regarding referrals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_has_seen_ngTDC__c</fullName>
        <label>Client has seen ngTDC?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Client_open_to_speaking_engagements__c</fullName>
        <description>Marketing</description>
        <label>Client open to speaking engagements?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Closed_Won_Cross_Sell_Opp_Count__c</fullName>
        <label>Closed Won Cross Sell Opp Count</label>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>equals</operation>
            <value>Cross-sell (New product)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Closed_Won_Livongo_For_Diabetes_PwD_Sum__c</fullName>
        <label>Closed Won Livongo for Diabetes PwD Sum</label>
        <summarizedField>LVGO__Opportunity__c.LVGO__Livongo_for_Diabetes_PwDs__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>equals</operation>
            <value>New Business, Expansion, Cross-sell (New product)</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Closed_Won_Opportunity_Count__c</fullName>
        <label>Closed Won Opportunity Count</label>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>equals</operation>
            <value>New Business, Expansion, Cross-sell (New product)</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Conversation_had_with__c</fullName>
        <label>Conversation had with?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client - Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>CVS/Aetna AE</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Cost_of_diabetes_testing_supplies__c</fullName>
        <description>Cost of diabetes testing supplies for the Account - will map to the Opportunity field</description>
        <label>Cost of diabetes testing supplies</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Covered_Lives__c</fullName>
        <description>Number of total covered lives</description>
        <label>Covered Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__CurrentUser_CIM__c</fullName>
        <formula>IF( LVGO__Client_Implementation_Manager__c  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser_CIM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__CurrentUser_CSM__c</fullName>
        <formula>IF(LVGO__CSM__c  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser_CSM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Current_Diabetes_Supply_Spend_PPPM__c</fullName>
        <description>Actual or estimated cost PPPM for strips, device, lancets, lancing device, etc</description>
        <label>Current Diabetes Supply Spend PPPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Custom_marketing_requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom marketing requirements?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Custom_marketing_requirements_detail__c</fullName>
        <label>Custom marketing requirements detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__DUNS_Employees__c</fullName>
        <label>DUNS Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>